# qpp

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: AI_HANDOFF_QPP_QWEN.md  ESTADO_ACTUAL_QPP_QWEN.md  INFOGRAPHIC_BRIEF.md  QPP_BitTrit_BGSP_documentacion_completa.md  QPP_HYBRID_FINAL_REPORT.md  QPP_PRODUCTION_PIPELINE.md
outputs/: README.md
paper/: qpp_paper.tex
scripts/: analyze_model_structure.py  plot_activation_error.py  plot_activation_sparsity.py  plot_embedding_deep_dive.py  plot_layer_quantile_curves.py  plot_mlp_deep_dive.py  qpp_1_5b.py  qpp_artifact_benchmark.py  qpp_auto_anchors.py  qpp_bf16_generation_benchmark.py  qpp_compress_save.py  qpp_direct_kernel_bench.py  qpp_final_max.py  qpp_final_pipeline.py  qpp_final_run.py  qpp_final_run_v5.py  qpp_final_simple.py  qpp_final_v2.py  qpp_finetune.py  qpp_generate_gated.py  qpp_generate_test.py  qpp_max_compression.py  qpp_mlp_validation.py  qpp_model_size_comparison.py  qpp_speed_quality_summary.py  qpp_vram_speed_final.py  qpp_vs_int8_comparison.py  qpp_works.py  train_gumbel_qpp_from_scratch.py  train_gumbel_qpp_gpt2_12M.py  train_ste_qpp_gpt2_12M.py
src/qpp/: __init__.py  benchmark.py  codebook.py  compression.py  gumbel_qpp.py  hybrid.py  runtime.py  ste_qpp.py
tests/: test_compression.py  test_legacy_integration.py  test_runtime.py
